2003-08-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * Corrected a leak in vtkGdcmREader.cxx, the pSource was find thanks to valgrind.
2003-07-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/win32/libgdcmjpeg12.dsp was not dos format
      * src/win32/libgdcmjpeg12.dsp : libgdcmijpeg12_EXPORTS -> LIBGDCMIJPEG12_EXPORTS
      * src/win32/gdcmdll.dsp: + /I "..\jpeg\libijg12"
2003-07-29 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/gdcmHeader.h : add std:: prefix for stl elements... like others in
        the file
      * src/gdcmFile.cxx : bug fix in affectation type
      * src/jpeg/libijpeg12/jmorecfg12.h : export for windows modified... like
        in src/jpeg/libijpeg8/jmorecfg8.h (JPR : copy/paste exists !!!)
      * Modifs of MVSC projects to compile them. Not concerning 2 identic
        symbols... futur problem ?
2003-07-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/win32/libgdcmijpeg12.dsp was missing
      * modified gdcm.dsw accordingly
2003-07-28  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/gdcmHeader.cxx : misplaced return 0.; for ACR/NEMA
2003-07-24 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/jpeg/libijg12/.cvsignore, jconfig.* : ommited files while last
        commit of JPR (before his hollidays to facilitate our work).
      * setup.py : bug fix in code. Modifications made while the last commit
        of JPR. The code hasn't been tested before the commit... it's so
        useless to make that (for best programmer that is JPR) !!!
2003-07-08  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * tagged the current version as Version0_3 (i.e. version 0.3)
2003-07-08  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * vtk/testvtkGdcmReader.cxx : remove a symbol that is unused
      * src/jpeg/libijg8/jmorecfg.h : adding export symbol for windows