@@ -1,5 +1,16 @@
 // gdcmDictEntry
 
+#ifdef _MSC_VER
+//'identifier' : decorated name length exceeded, name was truncated
+//#pragma warning ( disable : 4503 )
+// 'identifier' : class 'type' needs to have dll-interface to be used by
+// clients of class 'type2'
+#pragma warning ( disable : 4251 )
+// 'identifier' : identifier was truncated to 'number' characters in the
+// debug information
+#pragma warning ( disable : 4786 )
+#endif //_MSC_VER
+
 #include <fstream>
 #include <stdlib.h>  // For getenv
 #include "gdcmUtil.h"
