@@ -1,5 +1,14 @@
 // gdcmElValSet.cxx
 
+#ifdef _MSC_VER
+// 'identifier' : class 'type' needs to have dll-interface to be used by
+// clients of class 'type2'
+#pragma warning ( disable : 4251 )
+// 'identifier' : identifier was truncated to 'number' characters in the
+// debug information
+#pragma warning ( disable : 4786 )
+#endif //_MSC_VER
+
 #include <sstream>
 #include "gdcmUtil.h"
 #include "gdcmElValSet.h"
